# Jarvis-AI

./: JARVIS Launcher.bat  JARVIS.spec  LAUNCHER_README.md  README.md  config.py  convert_logo.py  launcher.py  requirements.txt  run.py  start_jarvis.bat
JARVIS_AI/: .env.example  .gitignore  JARVIS Launcher.bat  JARVIS.spec  LAUNCHER_README.md  config.py  convert_logo.py  launcher.py  pyproject.toml  run.py  start_jarvis.bat
app/: generate_thinking_audio.py  main.py  models.py
app/services/: brain_service.py  chat_service.py  groq_service.py  realtime_service.py  vector_store.py
app/utils/: key_rotation.py  retry.py  time_info.py
database/chats_data/: chat_0599d2c0096c43539e6d0c05c8410e99.json  chat_0b7680f2bbc44955b45579eed94fabc4.json  chat_133849cd440040089c7b63a041f5694b.json  chat_13b917983c084f46839374f6014a0aa1.json  chat_17663726b2614105b72015dd2d2d9d5f.json  chat_2341a6df53ca457e8b7f90bf1558a1e9.json  chat_27909ade6b76482ab2951170d1c07fb0.json  chat_2a72c60abf9d42719e54eeda126ee8e3.json  chat_370fac9f188d4bc287591c328aa180f1.json  chat_3a5f7c6f1957407f9d41de5099638111.json  chat_3e1f3f79838341e1a08134e15cd802eb.json  chat_4bd9f9d1b3494b4989052b90b0633420.json  chat_50b409000e3a42f1b7ebfc4daf26d67f.json  chat_5e0d8c47f9a041b9ad70905e4399f9db.json  chat_645084139233454187465349499e20fa.json  chat_6e625897e8e74a8dadc05bd0ff13fce3.json  chat_7915344b52bf431d96fb3fb5ca8ee2b6.json  chat_7c6e140c91264ecdb55c61e4a7ce91a0.json  chat_8a4854b858624af0bc6db99d2091b1aa.json  (+19 more)
database/learning_data/: my_details.txt  (+2 more)
frontend/: index.html  orb.js  script.js  style.css
(+2 files in other folders)
