[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-assistant"
version = "2.0.0"
description = "J.A.R.V.I.S — Just A Rather Very Intelligent System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rudraksh Patel"},
]

dependencies = [
    "fastapi>=0.100.0,<1.0",
    "uvicorn[standard]>=0.22.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "tavily-python>=0.5.0",
    "edge-tts>=6.1.0",
    "psutil>=5.9.0",
    "mss>=9.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
jarvis = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
